chore: updated resume

--- a/src/assets/data/resume/JohannScott-de_DE.tex
+++ b/src/assets/data/resume/JohannScott-de_DE.tex
@@ -22,7 +22,8 @@
 \renewcommand{\footrulewidth}{0pt}
 
 \newcommand{\emailaddr}{johann@somecollagist.com}
-\newcommand{\website}{somecollagist.github.io}
+\newcommand{\phonenumber}{+44 (0)7534 846682}
+\newcommand{\website}{somecollagist.com}
 \newcommand{\linkedin}{www.linkedin.com/in/somecollagist}
 
 \titleformat{\section}
@@ -88,7 +89,7 @@
   \vspace{1em}
   {
     \href{mailto:\emailaddr}{\emailaddr} {|}
-    +44 (0)7534 846682 {|}
+    {\phonenumber} {|}
     \href{https://\website}{\website} {|}
     \href{https://\linkedin}{\linkedin}
   } \\
@@ -109,7 +110,8 @@
   \section{Bildung}
     \resumeSubheadingList{
       \resumeSubheading[
-        Erwarteter Abschluss mit Auszeichnung: ``First Class Honours''
+        Erwarteter Abschluss mit Auszeichnung: ``First Class Honours'', Empfänger
+        der ``Dean's List'' \\ (Dekansliste) in der zweiten Jahr.
       ]
         {University of St Andrews}
         {St Andrews, Fife, Vereinigtes Königreich}
