--- a/src/assets/data/resume/JohannScott-en_GB.tex
+++ b/src/assets/data/resume/JohannScott-en_GB.tex
@@ -21,7 +21,8 @@
 \renewcommand{\footrulewidth}{0pt}
 
 \newcommand{\emailaddr}{johann@somecollagist.com}
-\newcommand{\website}{somecollagist.github.io}
+\newcommand{\phonenumber}{+44 (0)7534 846682}
+\newcommand{\website}{somecollagist.com}
 \newcommand{\linkedin}{www.linkedin.com/in/somecollagist}
 
 \titleformat{\section}
@@ -87,7 +88,7 @@
   \vspace{1em}
   {
     \href{mailto:\emailaddr}{\emailaddr} {|}
-    +44 (0)7534 846682 {|}
+    {\phonenumber} {|}
     \href{https://\website}{\website} {|}
     \href{https://\linkedin}{\linkedin}
   } \\
@@ -107,7 +108,7 @@
   \section{Education}
     \resumeSubheadingList{
       \resumeSubheading[
-        Expected First Class Honours
+        Expected First Class Honours, recipient of Dean's List in second year.
       ]
         {University of St Andrews}
         {St Andrews, Fife, United Kingdom}
