fix: added average grade

--- a/src/assets/data/resume/JohannScott-de_DE.tex
+++ b/src/assets/data/resume/JohannScott-de_DE.tex
@@ -110,7 +110,7 @@
   \section{Bildung}
     \resumeSubheadingList{
       \resumeSubheading[
-        Erwarteter Abschluss mit Auszeichnung: ``First Class Honours'', Empfänger
+        Erwarteter Abschluss mit Auszeichnung: ``First Class Honours'' (durchschnittliche Noten: 17.5/20), Empfänger
         der ``Dean's List'' \\ (Dekansliste) in der zweiten Jahr.
       ]
         {University of St Andrews}
@@ -188,7 +188,7 @@
         {Mai 2024 {-} Heute}
       \resumeSubheading[
         Unter Verwendung des zuvor genannten Wakatiwai-Bootloaders ist Eisen
-        ein einfacher Kernel für die x86\_64 Architektue, geschrieben in Rust.
+        ein einfacher Kernel für die x86\_64 Architektur, geschrieben in Rust.
       ]
         {Eisen}
         {GitHub: \href{https://github.com/kumomi-systems/eisen}
