--- a/src/assets/data/resume/JohannScott-en_GB.tex
+++ b/src/assets/data/resume/JohannScott-en_GB.tex
@@ -108,7 +108,7 @@
   \section{Education}
     \resumeSubheadingList{
       \resumeSubheading[
-        Expected First Class Honours, recipient of Dean's List in second year.
+        Expected First Class Honours (avg. 17.5/20), recipient of Dean's List for academic excellence in second year.
       ]
         {University of St Andrews}
         {St Andrews, Fife, United Kingdom}
