fix: fomatting on german version

--- a/src/assets/data/resume/JohannScott-de_DE.tex
+++ b/src/assets/data/resume/JohannScott-de_DE.tex
@@ -111,7 +111,7 @@
     \resumeSubheadingList{
       \resumeSubheading[
         Erwarteter Abschluss mit Auszeichnung: ``First Class Honours'' (durchschnittliche Noten: 17.5/20), Empfänger
-        der ``Dean's List'' \\ (Dekansliste) in der zweiten Jahr.
+        der ``Dean's List'' (Dekansliste) in der zweiten Jahr.
       ]
         {University of St Andrews}
         {St Andrews, Fife, Vereinigtes Königreich}
